--- a/TestSB.ipynb
+++ b/TestSB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dfd35111",
+   "id": "2c06d7d5",
    "metadata": {},
    "outputs": [
     {
@@ -21,11 +21,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7599a26a",
+   "id": "6ab97a05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# git status\n"
+    "# git status\n",
+    "# TestSB.ipynb\n",
+    "# git commit -m 'first commit'"
    ]
   }
  ],
