Test Pull Request

--- a/TestSB.ipynb
+++ b/TestSB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2c06d7d5",
+   "id": "80f10844",
    "metadata": {},
    "outputs": [
     {
@@ -21,13 +21,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ab97a05",
+   "id": "0153df6f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# git status\n",
     "# TestSB.ipynb\n",
-    "# git commit -m 'first commit'"
+    "# git add <file_name>\n",
+    "# git commit -m 'first commit'\n",
+    "#git push origin main\n",
+    "# git checkout <branchname>  (to create a new branch)\n",
+    "# git branch (to confirm the new branch you are on)\n",
+    "# git push origin <branch_name>\n",
+    "# Done"
    ]
   }
  ],
